--- a/news/templates/news/category.html
+++ b/news/templates/news/category.html
@@ -1,6 +1,7 @@
 {% extends 'news/base.html' %}
+
 {% block content %}
-{% for article in articles %}
+{% for article in category.article_set.all %}
 <div class="container">
     <img src="{{ article.image.url }}" width="300" height="200" />
     <a href="{% url 'news:article' article.slug %}"> {{ article.title }}</a>
