Added display how long ago a article was created

--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -4,5 +4,7 @@
     <h1>{{ article.title }}</h1>
     <img src="{{ article.image.url }}" width="500" height="200" />
     {{ article.content|linebreaks }}
+    <p>{{ article.created_at|timesince}} ago</p>
+    <p>{{ article.author|linebreaks}}</p>
 </div>
 {% endblock content %}
