--- a/news/templates/news/category.html
+++ b/news/templates/news/category.html
@@ -7,7 +7,8 @@
     <a href="{% url 'news:article' article.slug %}"> {{ article.title }}</a>
     <p>{{ article.content|truncatewords:50|linebreaks }}</p>
 
-    {{ article.author }}
+    <p>{{ article.created_at|timesince}} ago</p>
+    <p>{{ article.author|linebreaks}}</p>
 
     <br>
 </div>
