--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -22,7 +22,7 @@
     </div>
     <div>
         {% if user.is_authenticated %}
-        <a class="nav-item nav-link" href="#">Profile</a>
+        <a class="nav-item nav-link" href="{% url 'news:profile' %}">{{user.username|title}}</a>
         <a class="nav-item nav-link" href="{% url 'news:logout' %}">Logout</a>
         {% else %}
         <a class="nav-item nav-link" href="{% url 'news:login' %}">Login</a>
@@ -37,7 +37,15 @@
         </li>
         {% endfor %}
     </ul>
+    <div>
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}">
+            {{ message }}
+        </div>
+        {% endfor %}
+        {% endif %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 </body>
