--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -5,12 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="{% static 'news/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'news/style.css' %}">
     <title>
         News
     </title>
@@ -20,7 +22,7 @@
     <div class="container">
         <h1><a href="{% url 'news:home' %}">News</a></h1>
     </div>
-    <div>
+    <div class="nav justify-content-right">
         {% if user.is_authenticated %}
         <a class="nav-item nav-link" href="{% url 'news:profile' %}">{{user.username|title}}</a>
         <a class="nav-item nav-link" href="{% url 'news:logout' %}">Logout</a>
@@ -29,14 +31,16 @@
         <a class="nav-item nav-link" href="{% url 'news:register' %}">Register</a>
         {% endif %}
     </div>
-    <ul class="nav justify-content-center">
-        {% for category in categories %}
-        <li class="nav-item">
-            <h3><a href="{% url 'news:category' category.slug %}" class="nav-link">{{category.title}}</a></h3>
+    <div>
+        <ul class="nav justify-content-center">
+            {% for category in categories %}
+            <li class="nav-item">
+                <h3><a href="{% url 'news:category' category.slug %}" class="nav-link">{{category.title}}</a></h3>
 
-        </li>
-        {% endfor %}
-    </ul>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
     <div>
         {% if messages %}
         {% for message in messages %}
