--- a/news/templates/news/article.html
+++ b/news/templates/news/article.html
@@ -1,7 +1,13 @@
 {% extends 'news/base.html' %}
+{% block navbar %}
+{% include 'news/navbar.html' %}
+{% endblock %}
 {% block content %}
+<br />
+<br />
 <div class="container">
-    <h1>{{ article.title }}</h1>
+
+    <h3>{{ article.title }}</h3>
     <img src="{{ article.image.url }}" width="500" height="300" />
     {{ article.content|linebreaks }}
     <p>{{ article.created_at|timesince}} ago</p>
