--- a/news/templates/news/base.html
+++ b/news/templates/news/base.html
@@ -19,29 +19,20 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container nav justify-content-center">
         <h1><a href="{% url 'news:home' %}">News</a></h1>
     </div>
-    <div class="nav justify-content-right">
+    <div class="nav justify-content-end">
         {% if user.is_authenticated %}
-        <a class="nav-item nav-link" href="{% url 'news:profile' %}">{{user.username|title}}</a>
-        <a class="nav-item nav-link" href="{% url 'news:logout' %}">Logout</a>
+        <strong><a class="nav-item nav-link" href="{% url 'news:profile' %}">{{user.username|title}}</a></strong>
+        <strong><a class="nav-item nav-link" href="{% url 'news:logout' %}">Logout</a></strong>
         {% else %}
-        <a class="nav-item nav-link" href="{% url 'news:login' %}">Login</a>
-        <a class="nav-item nav-link" href="{% url 'news:register' %}">Register</a>
+        <strong><a class="nav-item nav-link" href="{% url 'news:login' %}">Login</a></strong>
+        <strong><a class="nav-item nav-link" href="{% url 'news:register' %}">Register</a></strong>
         {% endif %}
     </div>
-
-    <div>
-        <ul class="nav justify-content-center">
-            {% for category in categories %}
-            <li class="nav-item">
-                <h3><a href="{% url 'news:category' category.slug %}" class="nav-link">{{category.title}}</a></h3>
-
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
+    {% block navbar %}
+    {% endblock %}
     <div>
         {% if messages %}
         {% for message in messages %}
